# CO2_app

./: README.md  pyproject.toml  requirements.txt  send_to_sheets.py
co2_sensor_app/: .gitignore  home.py
co2_sensor_app/pages/: 01_pure_water_measurement_page.py  02_co2_measurement_page.py  03_pump_check_page.py
co2_sensor_app/services/: append_data_to_list.py  calculate_display_pw_I_ave.py  check_stable.py  co2_measurement.py  initialize_data_list.py  make_date_folder.py  pure_water_measurement.py  save_data_to_csv.py  save_data_to_image.py  serial_service.py  slack_notification.py  visualize_A_R_data.py  visualize_abs_data.py  visualize_intensity_data.py  visualize_pco2_data.py  visualize_ref_data.py  visualize_sig_data.py
