[project]
name = "uv-st-co2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytorch-tabnet>=4.1.0",
    "imblearn>=0.0",
    "numpy>=1.26.4",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.2",
    "polars>=1.6.0",
    "matplotlib>=3.9.2",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "pillow>=10.4.0",
    "optuna>=4.0.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.1",
    "xgboost>=2.1.1",
    "lightgbm>=4.5.0",
    "catboost>=1.2.5",
    "category-encoders>=2.6.3",
    "signate>=0.9.10",
    "jaconv>=0.4.0",
    "ydata-profiling>=4.9.0",
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "requests>=2.32.3",
    "serial>=0.0.97",
    "pyserial>=3.5",
    "kaleido==0.2.1",
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # error
    "W"  # warning
]
ignore = []
fixable = ["ALL"]
exclude = [
    ".ruff_cache"
]
line-length = 110
indent-width = 4
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
